@@ -1,5 +1,7 @@
 2020-03-30  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* combobox: fix tooltips in combo-boxes.
+
 	* shortcut: Ignore '${...}' prefixes, for internationalization.
 
 2020-03-29  Sam Varshavchik  <mrsam@courier-mta.com>
